[package]
name = "dota-dataset"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
noisy_float = { version = "0.2.0", features = ["serde"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_plain = "1.0.0"
serde_scan = "0.4.1"
